added overview to roboconf

--- a/app/views/posttree.html
+++ b/app/views/posttree.html
@@ -1,4 +1,6 @@
-<p>This is posttree.html</p>
+<h1 class="page-header">Dialog</h1>
+<h3 class="sub-header">New Dialog</h3>
+<p>Here you can add new question trees for the robot to use</p>
 <div>
   <form ng-submit="postTree()">
     <input class="textbox" type="textarea" ng-model="tree">
