--- a/app/styles/management.css
+++ b/app/styles/management.css
@@ -1,3 +1,155 @@
-.textbox {
-  height:2em;  
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  padding-top: 50px;
+}
+
+/*
+* View specific
+*/
+.view {
+  padding-top: 50px;
+}
+
+/*
+*  Dialogs table
+*/
+.switch input {
+    display: none;
+}
+.switch i {
+    display: inline-block;
+    cursor: pointer;
+    padding-right: 20px;
+    transition: all ease 0.2s;
+    -webkit-transition: all ease 0.2s;
+    border-radius: 20px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #f5f5f5;
+}
+
+.switch i:before {
+    display: block;
+    content: '';
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background: white;
+    box-shadow: 0 1px 2px rgba(0,0,0,.5);
+}
+
+.switch :checked + i {
+    padding-right: 0;
+    padding-left: 20px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #642887;
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #642887;
+}
+
+.conf-btn {
+    -webkit-appearance: none;
+    outline: none;
+    border: 0;
+    background: transparent;
+    display:block;
+    text-align:center;
+}
+
+.new-dialog-btn {
+    -webkit-appearance: none;
+    outline: none;
+    border: 0;
+    background: transparent;
+  background: #642887;
+  color: #fff;
+}
+
+.new-dialog-btn:hover {
+  background: #9268AB;
+  color: #fff;
+}
+
+.new-dialog-btn:focus {
+  background: #9268AB;
+  color: #fff;
+}
+
+/*
+ * Global add-ons
+ */
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #fff;
+}
+
+/*
+ * Top navigation
+ */
+.navbar-fixed-top {
+  border: 0;
+  border-bottom: 1px solid #eee;
+}
+
+.sonera-logo {
+  height: 21px;
+}
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a{
+  padding-right: 20px;
+  padding-left: 20px;
+  color: #642887;
+}
+.nav-sidebar > li > a:hover {
+  border-right: 4px solid #642887;
+}
+
+.nav-sidebar > .active > a,
+.nav-sidebar > .active > a:hover,
+.nav-sidebar > .active > a:focus {
+/*  background-color: #642887;*/
+border-right: 4px solid #642887;
+}
+
+/*
+ * Main content
+ */
+
+.main {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
 }
