--- a/app/views/posttree.html
+++ b/app/views/posttree.html
@@ -1,27 +1,22 @@
 <h1 class="page-header">Dialog</h1>
 <h3 class="sub-header">New Dialog</h3>
 <p>Here you can add new question trees for the robot to use</p>
-<div>
-  <form ng-submit="postTree()">
-    <input class="textbox" type="textarea" ng-model="tree">
-    <input type="submit" value="Add Tree">
-  </form>
-</div>
 
 <!-- Nested node template -->
 <script type="text/ng-template" id="nodes_renderer.html">
   <div ui-tree-handle class="tree-node tree-node-content">
-    <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><span
+  {{node.id}}
+ <input type="text" placeholder="Answer"><input type="text" placeholder="Question">
+    <a class="btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)"><span
+        class="glyphicon glyphicon-plus"></span></a>
+            <a class="btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
+        class="glyphicon glyphicon-remove"></span></a>
+              <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><span
         class="glyphicon"
         ng-class="{
           'glyphicon-chevron-right': collapsed,
           'glyphicon-chevron-down': !collapsed
         }"></span></a>
-    {{node.title}}
-    <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
-        class="glyphicon glyphicon-remove"></span></a>
-    <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
-        class="glyphicon glyphicon-plus"></span></a>
   </div>
   <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
     <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
@@ -31,20 +26,18 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <h3>Basic Example</h3>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
     <div ui-tree id="tree-root">
+      <form>
       <ol ui-tree-nodes ng-model="data">
+        <li><input type="text" placeholder="Dialog Name"></li>
         <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
       </ol>
+      </form>
     </div>
   </div>
 
   <div class="col-sm-6">
+  <h3>Data model (dev only):</h3>
     <div class="info">
       {{info}}
     </div>
