--- a/app/styles/management.css
+++ b/app/styles/management.css
@@ -70,6 +70,15 @@ body {
   background: #9268AB;
   color: #fff;
 }
+/*
+* New Dialog
+*/
+.divider-vertical {
+height: 5px;
+margin: 0 6px;
+border-left: 1px solid #F2F2F2;
+border-right: 1px solid #FFF;
+}
 
 /*
  * Global add-ons
