--- a/app/views/posttree.html
+++ b/app/views/posttree.html
@@ -1,42 +1,21 @@
 <h1 class="page-header">Dialog</h1>
 <h3 class="sub-header">New Dialog</h3>
-<p>Here you can add new question trees for the robot to use</p>
-
-<!-- Nested node template -->
-<script type="text/ng-template" id="nodes_renderer.html">
-  <div ui-tree-handle class="tree-node tree-node-content input-group">
-                <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)">{{node.id}}<span class="divider-vertical"></span><span
-        class="glyphicon"
-        ng-class="{
-          'glyphicon-chevron-right': collapsed,
-          'glyphicon-chevron-down': !collapsed
-        }"></span></a>
- <input type="text" placeholder="Answer" ng-model="node.answertext"><input type="text" placeholder="Question" ng-model="node.questiontext">
-    <a class="btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)"><span
-        class="glyphicon glyphicon-plus"></span></a>
-            <a class="btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
-        class="glyphicon glyphicon-remove"></span></a>
-  </div>
-  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
-    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'" style="border-left: 2px solid #f5f5f5;">
-    </li>
-  </ol>
-</script>
-
+<p>Here you can add new question trees for the robot to use.</p>
 <div class="row">
   <div class="col-sm-12">
     <div ui-tree id="tree-root">
-      <form ng-submit="sendData()">
-      <ol ui-tree-nodes ng-model="data">
-        <li><input type="text" placeholder="Dialog Name"></li>
-        <li><input type="text" placeholder="First Question"></li>
-        <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
+      <form class="form-inline" ng-submit="sendData()">
+      <div class="dialog-area">
+      <ol class="list-start" ui-tree-nodes data-nodrop="true" ng-model="data">
+        <li ng-repeat="node in data" ui-tree-node data-nodrag ng-include="'templates/new-dialog-first-renderer.template.html'"></li>
       </ol>
-      <button class="col-sm-1 btn btn-md btn-danger" type="submit">Create</button>
+      </div>
+      <button class="col-sm-1 btn btn-normal btn-md new-dialog-btn" type="submit">Create</button>
       </form>
     </div>
   </div>
 
+<!-- dev
   <div class="col-sm-6">
   <h3>Data model (dev only):</h3>
     <div class="info">
@@ -45,3 +24,4 @@
     <pre class="code">{{ data | json }}</pre>
   </div>
 </div>
+-->
