--- a/app/templates/new-dialog-renderer.template.html
+++ b/app/templates/new-dialog-renderer.template.html
@@ -3,11 +3,11 @@
     <span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span>
   </a>
   <div class="dialog-input">
-    <input class="form-control input-sm" type="text" placeholder="Answer" ng-model="node.answertext">
+    <input class="form-control input-sm" type="text" placeholder="Answer" ng-model="node.answerText">
   </div>
   <span class="input-group-btn"></span>
   <div class="dialog-input">
-    <input class="form-control input-sm" type="text" placeholder="Question" ng-model="node.questiontext">
+    <input class="form-control input-sm" type="text" placeholder="Question" ng-model="node.questionText">
   </div>
   <a class="btn input-group-addon new-sub-item-btn" ng-click="newSubItem(this)">
     <span class="glyphicon glyphicon-plus"></span>
