dialog now working with correct scope

--- a/app/views/robo-question.template.html
+++ b/app/views/robo-question.template.html
@@ -1,4 +1,4 @@
-{{question.text}}
+<p>{{question.text}}</p>
 <div ng-if="question.id == 'Q1'">
     <div ng-repeat="answer in question.answers">
         <button ng-click="openQuestionForm(); answerQuestion(answer)">{{answer.text}}</button>
