--- a/app/styles/management.css
+++ b/app/styles/management.css
@@ -13,51 +13,58 @@ body {
 /*
 *  Dialogs table
 */
-.switch input {
-    display: none;
+
+.table tbody>tr>td.vert-align{
+  vertical-align: middle;
 }
+
+.switch input {
+  display: none;
+}
+
 .switch i {
-    display: inline-block;
-    cursor: pointer;
-    padding-right: 20px;
-    transition: all ease 0.2s;
-    -webkit-transition: all ease 0.2s;
-    border-radius: 20px;
-    box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #f5f5f5;
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+  padding-right: 20px;
+  transition: all ease 0.2s;
+  -webkit-transition: all ease 0.2s;
+  border-radius: 20px;
+  box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #f5f5f5;
 }
 
 .switch i:before {
-    display: block;
-    content: '';
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    background: white;
-    box-shadow: 0 1px 2px rgba(0,0,0,.5);
+  display: block;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  background: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,.5);
 }
 
 .switch :checked + i {
-    padding-right: 0;
-    padding-left: 20px;
-    box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #642887;
-    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #642887;
+  padding-right: 0;
+  padding-left: 20px;
+  box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #642887;
+  -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.5), inset 0 0 40px #642887;
 }
 
 .conf-btn {
-    -webkit-appearance: none;
-    outline: none;
-    border: 0;
-    width: 40px;
-    background: transparent;
-    display:block;
-    text-align:center;
+  -webkit-appearance: none;
+  outline: none;
+  border: 0;
+  width: 40px;
+  background: transparent;
+  display:block;
+  text-align:center;
 }
 
 .new-dialog-btn {
-    -webkit-appearance: none;
-    outline: none;
-    border: 0;
-    background: transparent;
+  -webkit-appearance: none;
+  outline: none;
+  border: 0;
+  background: transparent;
   background: #642887;
   color: #fff;
 }
@@ -81,7 +88,7 @@ body {
 }
 
 .dropdown-fix {
-    position: relative;
+  position: relative;
   z-index: 10000;
 }
 
@@ -98,7 +105,6 @@ body {
   margin: 0 6px;
   border-left: 1px solid #652D86;
 }
-
 
 .new-sub-item-btn {
   color: #00B48C;
@@ -199,6 +205,7 @@ body {
   padding-left: 20px;
   color: #642887;
 }
+
 .nav-sidebar > li > a:hover {
   border-right: 4px solid #642887;
 }
