--- a/app/views/posttree.html
+++ b/app/views/posttree.html
@@ -10,7 +10,7 @@
         <li ng-repeat="node in data" ui-tree-node data-nodrag ng-include="'templates/new-dialog-first-renderer.template.html'"></li>
       </ol>
       </div>
-      <button class="col-sm-1 btn btn-normal btn-md new-dialog-btn" type="submit">Create</button>
+      <input type="submit" value="Create" class="btn btn-normal btn-md new-dialog-btn" type="submit"></input>
       </form>
     </div>
   </div>
