--- a/app/views/robo-question.template.html
+++ b/app/views/robo-question.template.html
@@ -1,25 +1,25 @@
 <p>{{question.text}}</p>
-<div ng-if="question.id == 'Q1'">
-    <div ng-repeat="answer in question.answers">
+<div ng-if="question.questionId == '1'">
+    <div ng-repeat="answer in question.answerOptions">
         <button ng-click="openQuestionForm(); answerQuestion(answer)">{{answer.text}}</button>
     </div>
 </div>
 
-<div ng-if="question.answer_type == 'choise' && question.id != 'Q1'">
-    <div ng-repeat="answer in question.answers">
+<div ng-if="question.answerType == 'choice' && question.questionId != '1'">
+    <div ng-repeat="answer in question.answerOptions">
         <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
     </div>
 </div>
 
-<div ng-if="question.answer_type == 'checkbox'">
-    <div ng-repeat="answer in question.answers">
+<div ng-if="question.answerType == 'checkbox'">
+    <div ng-repeat="answer in question.answerOptions">
         <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
     </div>
 </div>
 
-<div ng-if="question.answer_type == 'form'">
+<div ng-if="question.answerType == 'form'">
     <p>Puhelin tai sähköposti</p><input type="text" ng-model="contactInfo"></input>
-    <div ng-repeat="answer in question.answers">
+    <div ng-repeat="answer in question.answerOptions">
         <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
     </div>
 </div>
