robot-avatar to directive

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,6 @@
 @import 'management.css';
 @import 'robot.css';
+@import 'robotavatar.css';
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
