added visibility to overview.html

--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -5,7 +5,7 @@
     <thead>
       <tr>
         <th>Name</th>
-        <th>Status</th>
+        <th>Visibility</th>
         <th>Activate</th>
         <th>Remove</th>
       </tr>
