--- a/app/templates/dialog-row.template.html
+++ b/app/templates/dialog-row.template.html
@@ -1,5 +1,5 @@
 <td class="vert-align">{{ row.dialogName }}</td>
-<td class="vert-align">{{ row.enabled }}</td>
+<td class="vert-align">{{ row.enabled ? visibilityRate() : '-'}}</td>
 <td class="vert-align"><label class="switch"><input ng-model="row.enabled" type="checkbox" ng-change="changeEnabled(this)"><i></i></label></td>
 <td class="vert-align">
   <button class="btn btn-default conf-btn">
