--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -1,20 +1,6 @@
 <h1 class="page-header">Dialog</h1>
 <h3 class="sub-header">Overview</h3>
-<div class="table-responsive">
-  <table class="table table-striped" ng-model="dialogs">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Visibility</th>
-        <th>Activate</th>
-        <th>Remove</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="row in dialogs" ng-include="'templates/dialog-row.template.html'"></tr>
-    </tbody>
-  </table>
-</div>
+<conf-overview></conf-overview>
 <a href="#/newtree" class="btn btn-normal btn-md new-dialog-btn">
   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Dialog
 </a>
