--- a/app/views/robo-question.template.html
+++ b/app/views/robo-question.template.html
@@ -1,20 +1,28 @@
+<div class="container" ng-init="startAni = false;">
+    <div class="box-base box2" ng-class="{'move-me': startAni}">
 
-{{question.text}}
-<div ng-if="question.answerType == 'choice'">
-    <div ng-repeat="answer in question.answerOptions">
-        <button ng-click="answerQuestion(answer); openQuestionForm();">{{answer.text}}</button>
-    </div>
-</div>
+        <button class="toggle" ng-click="startAni = !startAni">Myyntirobotti</button>
+        <hr id="chat-stripe">
+        <div ng-if="!formOpen">
+            {{question.text}}
+            <div ng-if="question.answerType == 'choice'">
+                <div ng-repeat="answer in question.answerOptions">
+                    <button ng-click="answerQuestion(answer); openQuestionForm();">{{answer.text}}</button>
+                </div>
+            </div>
 
-<div ng-if="question.answerType == 'checkbox'">
-    <div ng-repeat="answer in question.answerOptions">
-        <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
-    </div>
-</div>
+            <div ng-if="question.answerType == 'checkbox'">
+                <div ng-repeat="answer in question.answerOptions">
+                    <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
+                </div>
+            </div>
 
-<div ng-if="question.answerType == 'form'">
-    <p>Puhelin tai sähköposti</p><input type="text" ng-model="contactInfo"></input>
-    <div ng-repeat="answer in question.answerOptions">
-        <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
+            <div ng-if="question.answerType == 'form'">
+                <p>Puhelin tai sähköposti</p><input type="text" ng-model="contactInfo"></input>
+                <div ng-repeat="answer in question.answerOptions">
+                    <button ng-click="answerQuestion(answer)">{{answer.text}}</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
