--- a/app/templates/dialog-row.template.html
+++ b/app/templates/dialog-row.template.html
@@ -2,7 +2,7 @@
 <td class="vert-align">{{ row.enabled ? visibilityRate() : '-'}}</td>
 <td class="vert-align"><label class="switch"><input ng-model="row.enabled" type="checkbox" ng-change="changeEnabled(this)"><i></i></label></td>
 <td class="vert-align">
-  <button class="btn btn-default conf-btn">
+  <button class="btn btn-default conf-btn" ng-click="removeDialog(this)">
     <span class="glyphicon glyphicon-trash"></span>
   </button>
 </td>
