--- a/app/styles/robotavatar.css
+++ b/app/styles/robotavatar.css
@@ -105,25 +105,52 @@
     100% {bottom: 70%;}
 }
 
+
 #talkbubble {
-   width: auto;
-   height: 80px;
-   position: relative;
-   padding: 3px;
-   -moz-border-radius:    10px;
-   -webkit-border-radius: 10px;
-   border: 2px solid grey;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  margin-top: 10px;
+  z-index: 2;
+  width: auto;
+  height: auto;
+  position: relative;
+  padding: 8px;
+  border: 2px solid #73369e;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  font: normal 15px/2 "Abel", Helvetica, sans-serif;
+  color: black;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  background: #ffffff;
 }
 
-#talkbubble:before {
-   content:"";
-   position: absolute;
-   right: 60%;
-   top: 26px;
-   width: 0;
-   height: 0;
-   border-top: 13px solid transparent;
-   border-right: 26px solid;
-   border-bottom: 13px solid transparent;
+#talkbubble::before {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 0;
+  height: 0;
+  position: absolute;
+  content: "";
+  top: -26px;
+  bottom: 0px;
+  left: 60px;
+  margin: 0 0 93px;
+  padding: 13px 20px 15px 0;
+  border-top: 3px solid #73369e;
+  border-right: 3px solid #73369e;
+  border-bottom: 0 solid;
+  border-left: 0 solid;
+  -webkit-border-radius: 5px;
+  border-radius: 3px;
+  color: rgba(0,0,0,0.9);
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  background: rgba(255,255,255,1);
+  -webkit-transform: rotateZ(-109deg)  translateX(-8px) skewX(-47deg);
+  -webkit-transform-origin: 50% 50% 0;
+  transform-origin: 50% 50% 0;
 }
 
