--- a/app/views/robo-dialog.template.html
+++ b/app/views/robo-dialog.template.html
@@ -15,7 +15,7 @@
 		Puhelin tai sähköposti
 	</div>
 	<input type="text" ng-model="contactInfo"></input>
-	<button ng-if="!goodBye" ng-click="submitContactInfo(contactInfo)">Submit</button>
+	<button ng-if="!goodBye" ng-click="submitContactInfo(contactInfo)">Lähetä</button>
 	<div ng-if="goodBye">
 		Kiitos yhteydenottopyynnöstä. Teihin ollaan yhteydessä 3 arkipäivän sisään.
 	</div>
